fixed margin error on mobile

--- a/scss/_workpage.scss
+++ b/scss/_workpage.scss
@@ -38,10 +38,13 @@ h3{
 .subtitle{
 	font-size: 2.3rem;
 		color: $grey1;
-font-family: 'Comfortaa', cursive;
+		font-family: 'Comfortaa', cursive;
+		padding: 0 0;
 
-
-	@include desktop{
+@include smlscreen {
+		padding-left: 2rem;
+	}
+	@include desktop {
 		max-width: 75%;
 		padding-left: 6rem;
 	}
@@ -80,8 +83,11 @@ font-family: 'Comfortaa', cursive;
 	flex-direction: column;
 	align-items: center;
 	flex: 1;
-	margin: 1.6rem;
+	margin: .9rem;
 	border-radius: 0 0 10% 10%;
+	@include smlscreen {
+		margin: 1.6rem;
+	}
 }
 
 .title {
